Resolved a problem of not showing the types

--- a/public/custom.css
+++ b/public/custom.css
@@ -4,8 +4,7 @@ body {
   background-size: cover;
 }
 
-body,
-wrapper {
+body {
   min-height: 100vh;
 }
 
